...
          ),
          title: Text(
            'Inserta el nombre del usuario que quieres añadir a amigos',
            style: TextStyle(color: myColor),
          ),
          content: TextField(
            key: const Key('friend_name'),
            onChanged: (value) {
              setState(() {
                userInput = value;
              });
            },
            decoration: InputDecoration(
...
                  style: ElevatedButton.styleFrom(
                    backgroundColor: Colors.red,
                  ),
                  child: const Text('Cancelar'),
                ),
                ElevatedButton(
                  key: const Key('confirm'),
                  onPressed: () {
                    sendSolicitud(userInput.trim()).then((int cumplido) {
                      Navigator.of(context).pop();
                      String message = "";
                      switch (cumplido) {
                        case 0:
                          message =
                              "No se puede enviar solicitud porque ya es tu amigo";
                          break;
                        case 1:
                          message = "Ya le enviaste solicitud";
                          break;
                        case 2:
                          message = "No te puedes enviar solicitud a ti mismo";
                          break;
                        case 3:
                          message = "Error al enviar la solicitud";
                          break;
                        case 4:
                          message = "Usuario no existe";
                          break;
                        case 10:
                          message = userInput;
                          break;
                      }
                      showDialogSendSolicitud(context, cumplido, message);
...
                ),
          backgroundColor: brown,
          shape: RoundedRectangleBorder(
            borderRadius: BorderRadius.circular(10.0),
          ),
          title: Text(
            cumplido == 10 ? 'Solicitud enviada a' : message,
            style: TextStyle(
              color: cumplido == 10 ? myColor : red,
            ),
            textAlign: TextAlign.center,
          ),
          content: Text(
...
  @override
  Widget build(BuildContext context) {
    return PopScope(
      canPop: false,
      onPopInvoked: (result) async {
        Navigator.push(context,
            MaterialPageRoute(builder: ((context) => const Bienvenido())));
      },
      child: AppWithDrawer(
        currentPage: "verAmigos",
        content: Scaffold(
          backgroundColor: peach,
          body: Column(
...
                width: double.infinity,
                padding: const EdgeInsets.all(16),
                child: Column(
                  crossAxisAlignment: CrossAxisAlignment.center,
                  children: [
                    const Text(
                      'Amigos',
                      style: TextStyle(
                        fontSize: 42,
                        color: Colors.brown,
                        fontWeight: FontWeight.bold,
                      ),
                    ),
...
                          icon: const Icon(
                            Icons.delete,
                            size: 60,
                          ),
                        ),
                        IconButton(
                          key: const Key('add_friend'),
                          onPressed: () async {
                            bool internet = await conexionInternt(context);
                            if (internet) {
                              enviarSolicitud();
                            }
                          },
...
