...

import 'package:flutter/material.dart';
import 'package:collectors_center/View/recursos/colors.dart';
import 'package:collectors_center/Presenter/cuentas.dart';

class Registrarse extends StatefulWidget {
  const Registrarse();

  @override
  State<Registrarse> createState() => _RegistrarseState();
}

class _RegistrarseState extends State<Registrarse> {
...
                buildInputField(
                  'Nombre de Usuario',
                  _nombreUsuarioController,
                  false,
                  TextInputType.text,
                  screenWidth,
                  const ValueKey('NombreUsuario'),
                ),
                const SizedBox(
                  height: 15,
                ),
                buildInputField(
                    'Correo Electrónico',
                    _emailController,
                    false,
                    TextInputType.emailAddress,
                    screenWidth,
                    const Key('CorreoRegistro')),
                const SizedBox(
                  height: 15,
                ),
                Padding(
                  padding: const EdgeInsets.symmetric(horizontal: 25),
                  child: Padding(
                    padding: const EdgeInsets.only(left: 10),
                    child: TextField(
                      key: const ValueKey('pass'),
                      controller: _passwordController,
                      obscureText: !_passwordVisible,
                      keyboardType: TextInputType.text,
                      decoration: InputDecoration(
                        suffixIcon: IconButton(
                          color: _passwordVisible
...
                ),
                Padding(
                  padding: const EdgeInsets.symmetric(horizontal: 25),
                  child: Padding(
                    padding: const EdgeInsets.only(left: 10),
                    child: TextField(
                      key: const ValueKey('confPass'),
                      controller: _confirmPasswordController,
                      obscureText: !_confirmPasswordVisible,
                      keyboardType: TextInputType.text,
                      decoration: InputDecoration(
                        suffixIcon: IconButton(
                          color: _confirmPasswordVisible
...
                const SizedBox(
                  height: 35,
                ),
                Padding(
                  padding: const EdgeInsets.symmetric(horizontal: 25),
                  child: GestureDetector(
                    key: const ValueKey('Registrar'),
                    onTap: registrarse,
                    child: Material(
                      elevation: 5,
                      borderRadius: BorderRadius.circular(12),
                      child: Container(
                        width: screenWidth - 100,
...
